# mismo

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  extra.css  index.html  index.md  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  toc-handler.js  typechecking.md
.github/: dependabot.yml
.github/workflows/: docs.yml  pre-release.yml  release.yml  test.yml
SUMMARY/: SUMMARY.md  index.html
benchmarks/: .gitignore  parse_address.py
concepts/fs/: fs.md  index.html
concepts/goals_and_alternatives/: goals_and_alternatives.md  index.html
concepts/versioning/: index.html  versioning.md
contributing/: contributing.md  index.html
data/: alaska-addresses-dirty.parquet  geojson_to_parquet.ipynb  make_apoc_addresses.ipynb
docs/: SUMMARY.md  contributing.md  index.md
docs/concepts/: alternatives.md  fellegi-sunter.md  fs.md  goals_and_alternatives.md  versioning.md
docs/examples/: .meta.yml  address_linkage.ipynb  patent_deduplication.ipynb  string_comparisons.ipynb
docs/howto/: lsh.ipynb
docs/overrides/: notebook.html
docs/reference/: arrays.md  block.md  clean.md  cluster.md  compare.md  core.md  datasets.md  evaluate.md  exceptions.md  fs.md  join.md  metrics.md  plot.md  sets.md  text.md  types.md  vectors.md
docs/reference/lib/: email.md  geo.md  index.md  name.md  phone.md
examples/: simple.ipynb
examples/address_linkage/: index.html
examples/patent_deduplication/: index.html  patent_deduplication.ipynb
howto/lsh/: index.html
jupyterlite/: jupyter-lite.json
jupyterlite/api/contents/: all.json
jupyterlite/files/examples/: address_linkage.ipynb  patent_deduplication.ipynb
jupyterlite/notebooks/: iframe-scroll-handler.js  index.html
jupyterlite/pypi/: all.json  mismo-0.2.6-py3-none-any.whl  mismo-0.4.1-py3-none-any.whl
mismo/: __about__.py  __init__.py  _aio.py  _array.py  _common.py  _counts_table.py  _dataset.py  _datasets.py  _dedupe.py  _dimension.py  _errors.py  _explain.py  _factorizer.py  _funcs.py  _join.py  _n_naive.py  _nest_asyncio.py  _recipe.py  _registry.py  _resolve.py  _sql_analyze.py  _structs.py  _task.py  _tfidf.py  _typing.py  _upset.py  _util.py  config.py  conftest.py  datasets.py  examples.py  exceptions.py  pipeline.py  playdata.py  util.py
mismo/_find/: __init__.py  _find_results.py
mismo/_labellink/: __init__.py  _labellink.py
mismo/analysis/: __init__.py  _records.py  _summary.py  charts.py
mismo/arrays/: __init__.py  _array.py  _builtins.py
mismo/arrays/tests/: test_array.py
mismo/block/: __init__.py  _analyze.py  _array.py  _base.py  _block.py  _blocker.py  _blocking.py  _blocking_rule.py  _core.py  _counts_table.py  _dedupe.py  _ensemble.py  _fingerprint.py  _geo.py  _key_blocker.py  _key_linkage_combined.py  _key_linker.py  _learner.py  _lsh.py  _sql_analyze.py  _strings.py  _upset.py  _upset_block.py  _util.py  blocker.py
mismo/block/fingerprint/: __init__.py  _blocker.py  _fingerprinter.py  _learner.py
mismo/clean/: __init__.py  _phonetic.py  _plot.py  _strings.py  strings.py
mismo/cluster/: __init__.py  _base.py  _connected_components.py  _dashboard.py  _dashboard_internal.py  _eval.py  _metrics.py  _plot.py  _subgraph.py  _subgraph_internal.py
mismo/compare/: __init__.py  _array.py  _base.py  _compare.py  _comparer.py  _comparison.py  _enum_comparer.py  _feature.py  _fs.py  _geospatial.py  _level_comparer.py  _levels.py  _match_level.py  _match_levels.py  _plot.py
mismo/eda/: __init__.py  _plot.py  _string.py
mismo/eval/: __init__.py
mismo/fingerprint/: __init__.py  _blocker.py  _fingerprinter.py  _learner.py
mismo/fs/: __init__.py  _plot.py  _train.py  _train_em.py  _util.py  _weights.py
mismo/joins/: __init__.py  _analyze.py  _conditions.py  _core.py  _keys.py
mismo/lib/: __init__.py
mismo/linkage/: __init__.py  _analyze.py  _combine.py  _conditions.py  _dimension.py  _join_linker.py  _key_linkage_combined.py  _key_linker.py  _label_linker.py  _linkage.py  _linker.py  _lsh.py  _metrics.py  _sample.py  _upset.py  _upset_block.py
mismo/linker/: __init__.py  _basic.py  _common.py  _id_linker.py  _join_linker.py  _key_linker.py  _label_linker.py  _linker.py  _lsh.py  _or_linker.py  _unnest.py
mismo/mcp/: __init__.py  __main__.py  _server.py
mismo/metrics/: __init__.py  _block.py  _cluster.py
mismo/partition/: __init__.py  _base.py  _connected_components.py
mismo/plot/: __init__.py  _cluster.py  _common.py  _eda.py
mismo/score/: __init__.py  _feature.py  _rule.py
mismo/sets/: __init__.py  _compare.py  _tfidf.py
mismo/tests/: test_array.py  test_common.py  test_datasets.py  test_examples.py  test_exceptions.py  test_explain.py  test_factorizer.py  test_funcs.py  test_join.py  test_n_naive.py  test_playdata.py  test_resolve.py  test_structs.py  test_tfidf.py  test_util.py  test_vector.py  test_version.py  util.py
mismo/text/: __init__.py  _features.py  _re_extract.py  _similarity.py  _string.py  _strings.py  _tfidf.py
mismo/tf/: __init__.py  _filterer.py  _tf.py
mismo/types/: __init__.py  _diff.py  _linkage.py  _linked_table.py  _links_table.py  _table_wrapper.py  _union_table.py  _updates.py  _wrapper.py
mismo/vector/: __init__.py  _vector.py
reference/arrays/: index.html
reference/block/: block.md  index.html
reference/clean/: clean.md  index.html
reference/cluster/: cluster.md  index.html
reference/compare/: compare.md  index.html
reference/core/: index.html
reference/datasets/: index.html
reference/eda/: eda.md  index.html
reference/exceptions/: index.html
reference/fs/: fs.md  index.html
reference/join/: index.html
reference/lib/: index.html
reference/metrics/: index.html
reference/playdata/: index.html  playdata.md
reference/sets/: index.html
reference/text/: index.html  text.md
reference/types/: index.html
reference/vectors/: index.html  vectors.md
search/: search_index.json
viz/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
viz/src/: main.tsx
(+144 files in other folders)
