[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mismo"
description = ''
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9" # require >3.9 so that we can use ibis>=6
license = { text = "LGPL-3.0-or-later" }
keywords = []
authors = [{ name = "Nick Crews", email = "nicholas.b.crews@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "altair>=5.0.0",
    "anywidget",
    # I am running into https://github.com/duckdb/duckdb/issues/11542
    # on duckdb 0.10.1 and 0.10.2 in the vector tests, so I am excluding those versions
    "duckdb>=0.8.0,!=0.10.1,!=0.10.2",
    "ibis-framework[duckdb]>=9.0.0",
    # "ibis-framework[duckdb] @ git+https://github.com/ibis-project/ibis.git@42f45fe59da492897f0449468a3036384be34214",
    "ipywidgets",
    "scikit-learn",
    "typing-extensions ; python_version < \"3.11\"", # needed for Self
    "solara>=1.32.1",
]

[project.urls]
Documentation = "https://nickcrews.github.io/mismo"
Issues = "https://github.com/NickCrews/mismo/issues"
Source = "https://github.com/NickCrews/mismo"

[tool.pdm.dev-dependencies]
lint = ["ruff", "mypy", "pre-commit"]
test = [
  "DoubleMetaphone",
  "httpx",
  "nicknames",
  "pytest",
  "pytest-benchmark>=3.4.1",
  "pytest-cov",
  "recordlinkage",
]
docs = [
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-jupyter",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--strict-markers",
  "--strict-config",
  "--benchmark-disable",
  "--benchmark-group-by=name",
  "--benchmark-sort=name",
]
filterwarnings = [
  # fail on any warnings that are not explicitly matched below
  "error",
]

[tool.coverage.run]
branch = true
parallel = true
omit = ["mismo/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.select = [
  "E", # pyflakes
  "F", # pyflakes
  "I", # isort
]

[tool.ruff.lint.isort]
# See https://github.com/charliermarsh/ruff#isort
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.11"
files = ["mismo"]
pretty = true
show_traceback = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
