[project]
name = "mismo"
description = "The SQL/Ibis powered sklearn of record linkage."
version = "0.2.3"
readme = "README.md"
requires-python = ">=3.10" # ibis>=9.1 requires python >=3.10
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Nick Crews", email = "nicholas.b.crews@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = [
  "record linkage",
  "entity resolution",
  "fuzzy linking",
  "machine learning",
  "ibis",
  "sql",
  "splink",
  "duckdb",
]
dependencies = [
  "ibis-framework>=9.1.0",
  # "ibis-framework[duckdb] @ git+https://github.com/ibis-project/ibis.git@42f45fe59da492897f0449468a3036384be34214",
  # Minimum version of sqlglot that has the flags option for regex_extract:
  # https://github.com/tobymao/sqlglot/pull/4326
  "sqlglot>=25.29.0",
  # Needed for Self, which was added in 4.0.0 according to
  # https://github.com/python/typing_extensions/blob/82d512ae1082b9c7c82678771746753a583cc64b/CHANGELOG.md
  "typing-extensions>=4.0.0 ; python_version < \"3.11\"",
]

[project.optional-dependencies]
viz = [
  "altair>=5.0.0",
  "ipywidgets>=7.5.1",
  "solara>=1.32.1",
  "anywidget>=0.9.18",
]
postal = [
  "postal>=1.1.7; sys_platform == 'linux' or sys_platform == 'darwin'",
]
spacy = [
  "en-us-address-ner-sm",
  "spacy>=3.8.2",
]
metrics = [
  "scikit-learn>=1.5.2",
]
playdata = [
  "recordlinkage>=0.16",
]

[project.urls]
Homepage = "https://github.com/NickCrews/mismo"
Documentation = "https://nickcrews.github.io/mismo"
Issues = "https://github.com/NickCrews/mismo/issues"
Source = "https://github.com/NickCrews/mismo"

[dependency-groups]
test = [
  "doublemetaphone>=1.1",
  "duckdb>=1.1.1",
  "httpx>=0.27.2",
  "ibis-framework[duckdb,examples]>=9.5.0",
  "nicknames>=0.1.10",
  "pre-commit>=4.0.0",
  "pytest>=8.3.3",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=5.0.0",
  "pytest-randomly>=3.16.0",
  "pytest-repeat>=0.9.4",
  "pytest-xdist>=3.6.1",
  "tabulate>=0.9.0", # Allows for printing tables in markdown
]
lint = [
  "mypy>=1.11.2",
  "ruff>=0.6.9",
]
docs = [
  "mkdocs-git-revision-date-localized-plugin>=1.2.9",
  "mkdocs-jupyterlite>=0.1.1",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-material>=9.5.39",
  "mkdocstrings[python]>=0.26.1",
]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
  {include-group = "docs"},
]

[tool.uv.sources]
en-us-address-ner-sm = { url = "https://github.com/NickCrews/spacy-address/releases/download/20241029-205717-sm/en_us_address_ner_sm-0.0.0-py3-none-any.whl" }


[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--strict-markers",
  "--strict-config",
  "--benchmark-skip",
  "--benchmark-group-by=name",
  "--benchmark-sort=name",
  # tell pytest-xdist to run in multiple processes
  "-n=auto",
]
filterwarnings = [
  # fail on any warnings that are not explicitly matched below
  "error",
  # spacy 3.8.7 uses some deprecated API from click for it's CLI
  "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ELLIPSIS",
]
markers = [
    "network: requires internet access to work (deselect with '-m \"not network\"')",
]
testpaths = ["mismo"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.select = [
  "E", # pyflakes
  "F", # pyflakes
  "I", # isort
]

[tool.ruff.lint.isort]
# See https://github.com/charliermarsh/ruff#isort
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.11"
files = ["mismo"]
pretty = true
show_traceback = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mismo"
module-root = ""